# Data-Assistant

./: README.md  app.py  pyproject.toml
agent/: agent.py
components/chat/: chat.py  chathistory.py
components/sidebar/: sidebar.py
tools/: codeplot.py  lineplot.py
