[tool.poetry]
name = "data-assistant"
version = "0.1.0"
description = ""
authors = ["soleksy <szy.oleksy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.1"
pandas = "^2.2.1"
langchain-experimental = "^0.0.53"
langchain-openai = "^0.0.8"
pydantic = "^2.6.3"
langchain = "^0.1.11"
matplotlib = "^3.8.3"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
